--- a/client/src/Navbar.css
+++ b/client/src/Navbar.css
@@ -4,6 +4,8 @@
     position: sticky;
     top:0;
     z-index: 99;
+    min-width: 1920px;
+    margin: 0 auto;
 }
 
 .nav-container{
@@ -12,7 +14,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 1920px;
 }
 
 .nav-div{
